fixed style of jumbotron to let the image overflow from its container

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ nav{
 }
 
 .arrow-container{
-    margin: 15px 0;
+    margin-bottom: 10px;
 }
 
 .jumbotron-description{
@@ -107,15 +107,16 @@ nav{
 .jumbotron-image-container{
     width:70% ;
     padding-right: 30px;
+    position: relative;
 }
-
 
 .wrap{
     flex-wrap: wrap;
 }
 
 .jumbo-image{
-    width: 100%;
+    width: 93%;
+    position:absolute
 }
 
 .container{
@@ -145,7 +146,6 @@ nav{
 
 div.plan-title{
     width: 100%;
-    height: 7%;
     text-align: center;
     border: 1px solid black;
 }
